# friend-list

./: .gitignore  Cargo.toml  package.json
.github/workflows/: ci.yml
program/: Cargo.toml
shared/: Cargo.toml
src/: clparse.rs  main.rs
