[package]
name = "cli-program-template"
version = "0.1.5"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.3"
clap = "3.1.6"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
solana-cli-template-program-bpf = {path = "program"}
sol-template-shared = {path = "shared"}
solana-clap-utils = "1.9.9"
solana-cli-config = "1.9.9"
solana-client = "1.9.9"
solana-logger = "1.9.9"
solana-remote-wallet = "1.9.9"
solana-sdk = "1.9.9"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "program",
    "shared",
]
[dev-dependencies]
lazy_static = "1.4.0"
solana-validator = "1.9.9"
solana-streamer = "1.9.9"
